Added needed blank files for moonlander. Defined lander methods and velocity methods. Updated makefile header.

--- a/cs165/week06/assign06/makefile
+++ b/cs165/week06/assign06/makefile
@@ -1,9 +1,9 @@
 ###############################################################
 # Program:
 #     Milestone 06, Moon Lander
-#     Brother {Burton, Falin, Ercanbrack, Comeau}, CS165
+#     Brother Cook, CS165
 # Author:
-#     your name here
+#     Aaron Shiffler
 # Summary:
 #     Put your summary code here... 
 # Above and Beyond
