--- a/cs165/week08/check08b/makefile
+++ b/cs165/week08/check08b/makefile
@@ -1,9 +1,9 @@
 ###############################################################
 # Program:
 #     Checkpoint 08b, More inheritance
-#     Brother {Burton, Falin, Ercanbrack}, CS165
+#     Brother Cook, CS165
 # Author:
-#     your name here
+#     Aaron Shiffler
 # Summary:
 #     Summaries are not necessary for checkpoint assignments.
 ###############################################################
